@@ -98,7 +98,7 @@
     <ognl.version>3.1.3</ognl.version>
     <javassist.version>3.20.0-GA</javassist.version>
     <attoparser.version>2.0.1.RELEASE</attoparser.version>
-    <unbescape.version>1.1.3.RELEASE</unbescape.version>
+    <unbescape.version>1.1.4.RELEASE</unbescape.version>
     <jackson.version>2.6.3</jackson.version>
     <slf4j.version>1.6.6</slf4j.version>
     <!-- These are needed for showing the build timestamp correctly at the thymeleaf.properties file -->
